force-app/main/default/objects/Pilot__c/Pilot__c.object-meta.xml
<CustomObject>
    <description>무료 파일럿(POC) 진행 현황을 추적하는 오브젝트</description>
    <label>Pilot</label>
    <nameField>
        <label>Pilot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pilots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>