force-app/main/default/objects/Pilot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>연결된 고객사</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Pilots</relationshipName>
    <type>Lookup</type>
</CustomField>