force-app/main/default/objects/Pilot__c/fields/Converted_To_Paid__c.field-meta.xml
<CustomField>
    <fullName>Converted_To_Paid__c</fullName>
    <description>연결된 Opportunity가 Closed Won인지 여부. 파일럿 → 유료 전환율 리포트에 사용</description>
    <formula>ISPICKVAL(Opportunity__r.StageName, &quot;Closed Won&quot;)</formula>
    <label>Converted To Paid</label>
    <type>Checkbox</type>
</CustomField>