force-app/main/default/objects/Pilot__c/fields/Pilot_Health__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Health__c</fullName>
    <description>파일럿 진행 상태</description>
    <label>Pilot Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
                <default>true</default>
                <label>Healthy</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Stalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>