force-app/main/default/objects/Pilot__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>파일럿 시작일</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>