force-app/main/default/objects/Pilot__c/fields/Technician_Count__c.field-meta.xml
<CustomField>
    <fullName>Technician_Count__c</fullName>
    <description>온보딩된 기술자 수</description>
    <label>Technician Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>