force-app/main/default/objects/Pilot__c/listViews/At_Risk_Pilots.listView-meta.xml
<ListView>
    <fullName>At_Risk_Pilots</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pilot_Health__c</field>
        <operation>equals</operation>
        <value>At Risk</value>
    </filters>
    <label>At Risk Pilots</label>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Pilot_Health__c</columns>
    <columns>Technician_Count__c</columns>
    <columns>End_Date__c</columns>
</ListView>